--- a/beginner/01/PHOTO BOOK_files/style.css
+++ b/beginner/01/PHOTO BOOK_files/style.css
@@ -16,8 +16,6 @@ img {
     max-width: 100%;
 }
 
-
-/* 共通部分 */
 .container {
     max-width: 1000px;
     margin: 0 auto;
@@ -45,21 +43,10 @@ img {
 }
 
 
-/* header */
 #header {
-    margin: 60px 0 10px 0;
+    margin-top: 60px;
 }
 
-#header .site-title a{
-    margin-bottom: 20px;
-    text-decoration: none;
-    color: #333;
-    font-size: 25px;
-    font-weight: lighter;
-  }
-
-
-/* main */
 #mainvisual {
     padding-bottom: 60px;
 }
@@ -125,34 +112,20 @@ img {
     opacity: 0.8;
 }
 
-/* footer */
 #footer {
     font-size: 0.65rem;
     padding: 15px 0;
     
 }
 
-/* Responsive */
+
 @media screen and (max-width: 1024px) {
-    
-    .inner {
-         padding: 0 40px;
-    }
 
     #header {
         padding: 0 10px;
     }
 
     #mainvisual {
-        padding: 0 10px 60px 10px;
-    }
-
-    #detail .content {
-    flex-direction: column;
-    }
-
-    #detail .content .img {
-        width: 100%;
-        margin: 0 0 25px 0;
+        padding: 0 10px;
     }
 }
